[package]
name = "rewind"
version = "0.1.0"
authors = ["debruinf <fdebruin.prive@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to do a rewind on your filesystem"
readme = "README.md"
homepage = "https://github.com/debruinf/rewind"
repository = "https://github.com/debruinf/rewind"
keywords = ["cli", "undo", "files"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.0"
